# better-iptv

./: .gitignore  CHANGELOG.md  CHANGELOG_USER.md  CONTRIBUTING.md  README.md  VERSION.md  eslint.config.js  index.html  package-lock.json  package.json  release.yml  test.yml  vite.config.ts  vitest.config.ts
.github/: DISCUSSIONS_SETUP_GUIDE.md  FUNDING.yml  GITHUB_INFRASTRUCTURE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/discussion-templates/: BUG_DISCUSSION_PINNED.md
.github/workflows/: ios.yml  release.yml  stale.yml  test.yml
aur/: .SRCINFO  PKGBUILD  README.md
docs/: VERSION_WORKFLOW.md  iOS_BUILD.md
plans/: strong-arguments-for-changes.md
resources/: .gitignore
scripts/: README.md  ci-test-local.sh  create-release.sh  dependabot-automerge.sh  download-mpv.sh  ios-setup-macos.sh  release.sh  setup-git-hooks.sh  sync-version.cjs  update-aur.sh
src/: App.tsx
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/capabilities/: mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  http.rs  lib.rs  main.rs  state.rs
src-tauri/src/channel_domain/: mod.rs
src-tauri/src/commands/: channel.rs  epg.rs  mod.rs  parental.rs  platform.rs  playback.rs  playlist.rs  series.rs  settings.rs  vod.rs
src-tauri/src/db/: mod.rs  models.rs  mutations.rs  operations.rs  queries.rs  schema.rs  test_helpers.rs
src-tauri/src/epg/: mod.rs  xmltv.rs
src-tauri/src/epg_domain/: mod.rs
src-tauri/src/mpv/: player.rs
src-tauri/src/parental_domain/: mod.rs
src-tauri/src/playback/: mod.rs  mpv.rs
src-tauri/src/playlist/: mod.rs  parser.rs  xtream.rs
src-tauri/src/playlist_domain/: mod.rs
src-tauri/src/series_domain/: mod.rs
src-tauri/src/utils/: mod.rs
src-tauri/templates/: better-iptv.desktop
src/components/: CategoryBar.tsx  ChannelCard.tsx  ChannelHeader.tsx  ContentTypeTabs.tsx  ErrorBoundary.tsx  IOSVideoPlayer.tsx  LoadingScreen.tsx  MainScreen.tsx  NowPlayingBar.tsx  ProfileManager.tsx  SearchBar.tsx  SeriesView.tsx  Settings.tsx  Setup.tsx  VodView.tsx
src/components/ui/: tabs.tsx
src/hooks/: index.ts  useChannelFilter.ts  useChannelPlayback.ts  useDebouncedValue.ts  useEpgData.ts  useErrorHandler.ts  useKeyboardShortcuts.ts  useResponsiveGrid.ts
src/lib/: logger.ts  parentalControls.ts  platform.ts  tauri.ts  truncateAddress.ts
src/stores/: player-store.ts
src/test/: setup.ts
src/types/: errors.ts  index.ts
(+17 files in other folders)
