[package]
name = "better-ip-tv"
version = "2.2.0"
description = "Cross-platform IPTV player with MPV backend"
authors = ["Better-IP-TV Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "better_ip_tv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
# m3u_parser = "0.1"  # Using simple custom parser instead
anyhow = "1.0"
thiserror = "2.0"
quick-xml = { version = "0.37", features = ["serialize"] }
flate2 = "1.0"
regex = "1.10"
lazy_static = "1.4"
backoff = { version = "0.4", features = ["tokio"] }
wait-timeout = "0.2"

